# SpideHarness

./: .gitignore  .vercelignore  CLAUDE.md  README.md  install-skills.sh  install.ps1  install.sh  pyproject.toml  vercel.json
Mcaclaw/: .gitignore  README.md  install-mcaclaw.sh
api/: _data.py  data.json  index.py
configs/: default.yaml
docs/: create_tables.sql  project-analysis.md  skills-guide.md  spide-cli使用指南.md  strategy-report.md  supabase_schema.sql
docs/specs/: requirements-v1.1.1.md
scripts/: export_data.py  fetch_github_trending.py  migrate_sqlite_to_supabase.py  pack.sh
skills/: hermes.md  openclaw.md
skills/spide-analyze/: SKILL.md
skills/spide-autofix/: SKILL.md
skills/spide-batch/: SKILL.md
skills/spide-browser/: SKILL.md
skills/spide-crawl/: SKILL.md
skills/spide-deep-crawl/: SKILL.md
skills/spide-explorer/: SKILL.md
skills/spide-export/: SKILL.md
skills/spide-oneshot/: SKILL.md
skills/spide-schedule/: SKILL.md
skills/spide-search/: SKILL.md
skills/spide-search-fallback/: SKILL.md
skills/spide-usage/: SKILL.md
skills/spide-wordcloud/: SKILL.md
spide/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  llm.py  logging.py  memory.py  prompts.py  session_storage.py  workspace.py
spide/analysis/: __init__.py  summarizer.py  wordcloud_generator.py
spide/dashboard/: __init__.py  collector.py  renderer.py  template.py
spide/gateway/: __init__.py
spide/harness/: __init__.py  engine.py
spide/mcp/: __init__.py  client.py  registry.py  server.py  tools.py
spide/mcp/adapters/: __init__.py  hermes.py  openclaw.py
spide/mcp/transport/: __init__.py  http.py
spide/mqtt/: __init__.py  client.py
spide/queue/: __init__.py  broker.py
spide/spider/: __init__.py  batch_scheduler.py  fetcher.py  github_client.py  media_crawler_adapter.py  pipeline.py  task_scheduler.py  uapi_client.py
spide/storage/: __init__.py  exporter.py  models.py  redis_cache.py  repository.py  sqlite_repo.py  supabase_repo.py
tests/: conftest.py  test_iteration3.py  test_iteration4.py  test_storage.py
tests/e2e/: __init__.py  test_cli_e2e.py  test_cli_errors.py  test_env_precheck.py  test_full_pipeline.py
tests/integration/: __init__.py  test_crawl_pipeline.py  test_engine_lifecycle.py  test_real_crawl.py  test_real_llm.py  test_real_mqtt.py  test_uapi_real.py
tests/unit/: __init__.py  test_analysis.py  test_batch_scheduler.py  test_broker.py  test_config.py  test_dashboard.py  test_deep_crawl.py  test_engine.py  test_exceptions.py  test_exporter.py  test_fetcher.py  test_llm.py  test_mcp_server.py  test_memory.py  test_models.py  test_mqtt_client.py  test_pipeline.py  test_prompts.py  test_session_storage.py  test_sqlite_repo.py  test_task_scheduler.py  test_uapi_client.py  test_wordcloud.py  test_workspace.py
